<resources>
    <string name="app_name">Formulario</string>
    <string name="hint_nombre_completo">Nombre Completo</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="bnt_siguiente">Siguiente</string>
    <string name="bnt_editar">Editar</string>
    <string name="flag_editar">editar</string>

    <string name="pnombre_completo">nombre_completo</string>
    <string name="pdia">dia</string>
    <string name="pmes">mes</string>
    <string name="panio">anio</string>
    <string name="ptelefono">telefono</string>
    <string name="pmail">email</string>
    <string name="pdescripcion">descripcion</string>

    <string name="titulo_datos_formulario">Confirmar Datos</string>

    <string name="nombre_completo">Frank Malo</string>
    <string name="fecha_nacimiento">07/05/1986</string>
    <string name="etiqueta_fecha_nacimiento">Fecha de Nacimiento: </string>

    <string name="telefono">0939630219</string>
    <string name="etiqueta_telefono">Teléfono: </string>

    <string name="email">frankmalo86@gmail.com</string>
    <string name="etiqueta_email">email: </string>

    <string name="descripcion">Tarea de aplicaciones android para Coursera</string>
    <string name="etiqueta_descripcion">Descripción: </string>

</resources>
