<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="frank.malo.mobiles.app.tareaformulario.MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="@dimen/margin_top_layout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre_completo"
                android:layout_marginTop="@dimen/margin_top_viwes"
                android:lines="1"
                android:singleLine="true"
                android:elegantTextHeight="true" />

        </android.support.design.widget.TextInputLayout>


        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dpFechaNacimiento"
            android:layout_marginTop="@dimen/margin_top_viwes"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:focusable="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etTelefono"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:layout_marginTop="@dimen/margin_top_viwes"
                android:singleLine="true"
                android:lines="1"
                android:elegantTextHeight="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_marginTop="@dimen/margin_top_viwes"
                android:lines="1"
                android:singleLine="true"
                android:elegantTextHeight="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDescripcion"
                android:lines="5"
                android:hint="@string/hint_descripcion"
                android:layout_marginTop="@dimen/margin_top_viwes"
                android:gravity="top"
                android:maxLines="5"
                android:elegantTextHeight="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bnt_siguiente"
            android:theme="@style/btnGuardar"
            android:onClick="EnviarDatos" />
    </LinearLayout>
</RelativeLayout>
